New Customer File added to Notebooks section

--- a/sqlserver2019bigdataclusters/SQL2019BDC/notebooks/bdc_tutorial_03.ipynb
+++ b/sqlserver2019bigdataclusters/SQL2019BDC/notebooks/bdc_tutorial_03.ipynb
@@ -33,7 +33,7 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.0030108"
+                        "text/html": "Total execution time: 00:00:00.0014288"
                     },
                     "metadata": {}
                 },
@@ -47,7 +47,29 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.2592320"
+                        "text/html": "Total execution time: 00:00:00.6209978"
+                    },
+                    "metadata": {}
+                }
+            ],
+            "execution_count": 8
+        },
+        {
+            "cell_type": "code",
+            "source": "CREATE EXTERNAL TABLE [web_clickstream_clicks_data_pool]\r\n    (\"wcs_click_date_sk\" BIGINT \r\n    , \"wcs_click_time_sk\" BIGINT \r\n    , \"wcs_sales_sk\" BIGINT \r\n    , \"wcs_item_sk\" BIGINT\r\n    , \"wcs_web_page_sk\" BIGINT \r\n    , \"wcs_user_sk\" BIGINT)\r\n    WITH\r\n    (\r\n    DATA_SOURCE = SqlDataPool,\r\n    DISTRIBUTION = ROUND_ROBIN\r\n    );\r\nGO",
+            "metadata": {},
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully."
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.9618554"
                     },
                     "metadata": {}
                 }
@@ -56,7 +78,7 @@
         },
         {
             "cell_type": "code",
-            "source": "CREATE EXTERNAL TABLE [web_clickstream_clicks_data_pool]\r\n(\"wcs_click_date_sk\" BIGINT , \"wcs_click_time_sk\" BIGINT , \"wcs_sales_sk\" BIGINT , \"wcs_item_sk\" BIGINT, \"wcs_web_page_sk\" BIGINT , \"wcs_user_sk\" BIGINT)\r\nWITH\r\n(\r\n    DATA_SOURCE = SqlDataPool,\r\n    DISTRIBUTION = ROUND_ROBIN\r\n);",
+            "source": "/* Create an External Table that can read from the Storage Pool File Location */\r\nIF NOT EXISTS(SELECT * FROM sys.external_tables WHERE name = 'web_clickstreams_hdfs')\r\nBEGIN\r\n    CREATE EXTERNAL TABLE [web_clickstreams_hdfs]\r\n    (\"wcs_click_date_sk\" BIGINT \r\n    , \"wcs_click_time_sk\" BIGINT \r\n    , \"wcs_sales_sk\" BIGINT \r\n    , \"wcs_item_sk\" BIGINT\r\n    , \"wcs_web_page_sk\" BIGINT \r\n    , \"wcs_user_sk\" BIGINT)\r\n    WITH\r\n    (\r\n        DATA_SOURCE = SqlStoragePool,\r\n        LOCATION = '/web_logs',\r\n        FILE_FORMAT = csv_file\r\n    );\r\nEND",
             "metadata": {},
             "outputs": [
                 {
@@ -69,7 +91,7 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:01.8526029"
+                        "text/html": "Total execution time: 00:00:00.0011489"
                     },
                     "metadata": {}
                 }
@@ -78,25 +100,20 @@
         },
         {
             "cell_type": "code",
-            "source": "/* Create an External Table that can read from the Storage Pool File Location */\r\nIF NOT EXISTS(SELECT * FROM sys.external_tables WHERE name = 'web_customers_hdfs')\r\nBEGIN\r\n    CREATE EXTERNAL TABLE [web_customers_hdfs]\r\n    (FieldName\" VARCHAR(250) \r\n)\r\n    WITH\r\n    (\r\n        DATA_SOURCE = SqlStoragePool,\r\n        LOCATION = '/adventureworks_export',\r\n        FILE_FORMAT = csv_file\r\n    );\r\nEND",
-            "metadata": {},
-            "outputs": []
-        },
-        {
-            "cell_type": "code",
-            "source": "BEGIN\r\n   INSERT INTO web_clickstream_clicks_data_pool\r\n   SELECT wcs_user_sk, i_category_id, COUNT_BIG(*) as clicks\r\n     FROM web_clickstreams_hdfs\r\nEND",
+            "source": "BEGIN\r\n   INSERT INTO web_clickstream_clicks_data_pool\r\n   SELECT wcs_click_date_sk\r\n    , wcs_click_time_sk \r\n    , wcs_sales_sk \r\n    , wcs_item_sk \r\n    , wcs_web_page_sk  \r\n    , wcs_user_sk \r\n     FROM web_clickstreams_hdfs\r\nEND",
             "metadata": {},
             "outputs": [
                 {
-                    "output_type": "error",
-                    "evalue": "Msg 208, Level 16, State 1, Line 2\r\nInvalid object name 'sales.dbo.web_clickstreams_hdfs_parquet'.",
-                    "ename": "",
-                    "traceback": []
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(6770549 rows affected)"
+                    },
+                    "metadata": {}
                 },
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.0044263"
+                        "text/html": "Total execution time: 00:01:35.0381191"
                     },
                     "metadata": {}
                 }
@@ -125,13 +142,14 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:03.4759142"
+                        "text/html": "Total execution time: 00:00:09.2888920"
                     },
                     "metadata": {}
                 },
                 {
                     "output_type": "execute_result",
-                    "execution_count": 22,
+                    "metadata": {},
+                    "execution_count": 13,
                     "data": {
                         "application/vnd.dataresource+json": {
                             "schema": {
@@ -143,17 +161,17 @@
                             },
                             "data": [
                                 {
-                                    "0": "512000"
+                                    "0": "6770549"
                                 }
                             ]
                         },
-                        "text/html": "<table><tr><th>(No column name)</th></tr><tr><td>512000</td></tr></table>"
-                    },
-                    "metadata": {}
+                        "text/html": "<table><tr><th>(No column name)</th></tr><tr><td>6770549</td></tr></table>"
+                    }
                 },
                 {
                     "output_type": "execute_result",
-                    "execution_count": 22,
+                    "metadata": {},
+                    "execution_count": 13,
                     "data": {
                         "application/vnd.dataresource+json": {
                             "schema": {
@@ -180,93 +198,97 @@
                             },
                             "data": [
                                 {
-                                    "0": "37019",
-                                    "1": "85961",
+                                    "0": "37735",
+                                    "1": "67197",
                                     "2": "NULL",
-                                    "3": "3971",
-                                    "4": "14",
+                                    "3": "8769",
+                                    "4": "53",
                                     "5": "NULL"
                                 },
                                 {
-                                    "0": "37019",
-                                    "1": "24228",
+                                    "0": "37735",
+                                    "1": "66368",
                                     "2": "NULL",
-                                    "3": "3716",
-                                    "4": "14",
+                                    "3": "4710",
+                                    "4": "53",
                                     "5": "NULL"
                                 },
                                 {
-                                    "0": "37019",
-                                    "1": "62814",
+                                    "0": "37735",
+                                    "1": "29134",
                                     "2": "NULL",
-                                    "3": "3143",
-                                    "4": "14",
+                                    "3": "2568",
+                                    "4": "53",
                                     "5": "NULL"
                                 },
                                 {
-                                    "0": "37019",
-                                    "1": "60131",
+                                    "0": "37736",
+                                    "1": "62336",
                                     "2": "NULL",
-                                    "3": "13202",
-                                    "4": "14",
+                                    "3": "11924",
+                                    "4": "53",
                                     "5": "NULL"
                                 },
                                 {
-                                    "0": "37019",
-                                    "1": "48860",
+                                    "0": "37736",
+                                    "1": "61470",
                                     "2": "NULL",
-                                    "3": "13714",
-                                    "4": "14",
+                                    "3": "3914",
+                                    "4": "53",
                                     "5": "NULL"
                                 },
                                 {
-                                    "0": "37019",
-                                    "1": "70453",
+                                    "0": "37736",
+                                    "1": "6060",
                                     "2": "NULL",
-                                    "3": "248",
-                                    "4": "14",
+                                    "3": "16280",
+                                    "4": "53",
                                     "5": "NULL"
                                 },
                                 {
-                                    "0": "37019",
-                                    "1": "72847",
+                                    "0": "37736",
+                                    "1": "32023",
                                     "2": "NULL",
-                                    "3": "6721",
-                                    "4": "14",
+                                    "3": "12267",
+                                    "4": "53",
                                     "5": "NULL"
                                 },
                                 {
-                                    "0": "37019",
-                                    "1": "50429",
+                                    "0": "37736",
+                                    "1": "49579",
                                     "2": "NULL",
-                                    "3": "17647",
-                                    "4": "14",
+                                    "3": "15327",
+                                    "4": "53",
                                     "5": "NULL"
                                 },
                                 {
-                                    "0": "37019",
-                                    "1": "60478",
+                                    "0": "37736",
+                                    "1": "56435",
                                     "2": "NULL",
-                                    "3": "16914",
-                                    "4": "14",
+                                    "3": "15305",
+                                    "4": "53",
                                     "5": "NULL"
                                 },
                                 {
-                                    "0": "37019",
-                                    "1": "63148",
+                                    "0": "37736",
+                                    "1": "7883",
                                     "2": "NULL",
-                                    "3": "6664",
-                                    "4": "14",
+                                    "3": "4853",
+                                    "4": "53",
                                     "5": "NULL"
                                 }
                             ]
                         },
-                        "text/html": "<table><tr><th>wcs_click_date_sk</th><th>wcs_click_time_sk</th><th>wcs_sales_sk</th><th>wcs_item_sk</th><th>wcs_web_page_sk</th><th>wcs_user_sk</th></tr><tr><td>37019</td><td>85961</td><td>NULL</td><td>3971</td><td>14</td><td>NULL</td></tr><tr><td>37019</td><td>24228</td><td>NULL</td><td>3716</td><td>14</td><td>NULL</td></tr><tr><td>37019</td><td>62814</td><td>NULL</td><td>3143</td><td>14</td><td>NULL</td></tr><tr><td>37019</td><td>60131</td><td>NULL</td><td>13202</td><td>14</td><td>NULL</td></tr><tr><td>37019</td><td>48860</td><td>NULL</td><td>13714</td><td>14</td><td>NULL</td></tr><tr><td>37019</td><td>70453</td><td>NULL</td><td>248</td><td>14</td><td>NULL</td></tr><tr><td>37019</td><td>72847</td><td>NULL</td><td>6721</td><td>14</td><td>NULL</td></tr><tr><td>37019</td><td>50429</td><td>NULL</td><td>17647</td><td>14</td><td>NULL</td></tr><tr><td>37019</td><td>60478</td><td>NULL</td><td>16914</td><td>14</td><td>NULL</td></tr><tr><td>37019</td><td>63148</td><td>NULL</td><td>6664</td><td>14</td><td>NULL</td></tr></table>"
-                    },
-                    "metadata": {}
+                        "text/html": "<table><tr><th>wcs_click_date_sk</th><th>wcs_click_time_sk</th><th>wcs_sales_sk</th><th>wcs_item_sk</th><th>wcs_web_page_sk</th><th>wcs_user_sk</th></tr><tr><td>37735</td><td>67197</td><td>NULL</td><td>8769</td><td>53</td><td>NULL</td></tr><tr><td>37735</td><td>66368</td><td>NULL</td><td>4710</td><td>53</td><td>NULL</td></tr><tr><td>37735</td><td>29134</td><td>NULL</td><td>2568</td><td>53</td><td>NULL</td></tr><tr><td>37736</td><td>62336</td><td>NULL</td><td>11924</td><td>53</td><td>NULL</td></tr><tr><td>37736</td><td>61470</td><td>NULL</td><td>3914</td><td>53</td><td>NULL</td></tr><tr><td>37736</td><td>6060</td><td>NULL</td><td>16280</td><td>53</td><td>NULL</td></tr><tr><td>37736</td><td>32023</td><td>NULL</td><td>12267</td><td>53</td><td>NULL</td></tr><tr><td>37736</td><td>49579</td><td>NULL</td><td>15327</td><td>53</td><td>NULL</td></tr><tr><td>37736</td><td>56435</td><td>NULL</td><td>15305</td><td>53</td><td>NULL</td></tr><tr><td>37736</td><td>7883</td><td>NULL</td><td>4853</td><td>53</td><td>NULL</td></tr></table>"
+                    }
                 }
             ],
-            "execution_count": 22
+            "execution_count": 13
+        },
+        {
+            "cell_type": "markdown",
+            "source": "## Next Steps: Continue on to Working with Spark and ETL\r\n\r\nNow you're ready to open the next Python Notebook - `bdc_tutorial_04.ipynb` - to learn how to create and work with Spark and Extracting, Transforming and Loading data.",
+            "metadata": {}
         }
     ]
 }
