Added in instructions to change scripts to executable for each module

--- a/SQLonOpenShift/sqlonopenshift/04_HA.md
+++ b/SQLonOpenShift/sqlonopenshift/04_HA.md
@@ -69,7 +69,11 @@ Follow these steps to see how high availability works with SQL Server on OpenShi
 
 1. Open a shell prompt and change to the **sqlworkshops/SQLonOpenShift/sqlonopenshift/04_ha** directory.
 
-2. One of the simple methods for High Availability for OpenShift is at the container level. Since SQL Server is the main program in the container, if SQL Server is shutdown or crashes, OpenShift will automatically restart the container in the same pod and node. Run the following commands to see the status of the current pod deployed for the project you created in Module 01.
+2. Ensure your scripts are executable by running the following command (depending on your Linux shell and client you may need to preface this with sudo)
+
+    `chmod u+x *.sh`
+
+3. One of the simple methods for High Availability for OpenShift is at the container level. Since SQL Server is the main program in the container, if SQL Server is shutdown or crashes, OpenShift will automatically restart the container in the same pod and node. Run the following commands to see the status of the current pod deployed for the project you created in Module 01.
 
     `oc get pods -o wide`
 
@@ -80,7 +84,7 @@ Follow these steps to see how high availability works with SQL Server on OpenShi
 
     Take note of the pod name (under the NAME column), the IP address, and the NODE name (If your cluster has only one node, the node name will not change throughout this activity).
 
-3. Run the following commands to shutdown SQL Server. You can also use the script **step1_stop_container.sh**:
+4. Run the following commands to shutdown SQL Server. You can also use the script **step1_stop_container.sh**:
 
     `SERVERIP=$(kubectl get service | grep mssql-service | awk {'print $4'})`<br>
     `PORT=31433`<br>
@@ -96,7 +100,7 @@ Follow these steps to see how high availability works with SQL Server on OpenShi
 
     Note the pod name, IP address, and node have not changed. The STATUS should be Running.
 
-4. Execute the following commands to test SQL Server is running. You can also use the script **step2_test_sql.sh**
+5. Execute the following commands to test SQL Server is running. You can also use the script **step2_test_sql.sh**
 
     `SERVERIP=$(oc get service | grep mssql-service | awk {'print $4'})`<br>
     `PORT=31433`<br>
@@ -114,7 +118,7 @@ Follow these steps to see how high availability works with SQL Server on OpenShi
 
     Depending on how long it takes OpenShift to restart the container, your re-connection make take longer than a few seconds.
 
-5. Since you deployed the SQL Server container in a pod using 1 replica, if there is a failure of the pod in a node, OpenShift will attempt to to create a new pod and schedule it on the appropriate available node. For SQL Server, this is like a *failover* since OpenShift will start a new SQL Server container but pointing to the same PersistentVolumeClaim,  hence the same system and user databases. And the LoadBalancer acts like a *listener* so if the new SQL Server container has a new IP address, the application still connects to the same LoadBalancer IP address.
+6. Since you deployed the SQL Server container in a pod using 1 replica, if there is a failure of the pod in a node, OpenShift will attempt to to create a new pod and schedule it on the appropriate available node. For SQL Server, this is like a *failover* since OpenShift will start a new SQL Server container but pointing to the same PersistentVolumeClaim,  hence the same system and user databases. And the LoadBalancer acts like a *listener* so if the new SQL Server container has a new IP address, the application still connects to the same LoadBalancer IP address.
 
     **Note**: Ths is not the same as a SQL Server Availability Group which will be discussed in Module 05, Using an Operator with SQL Server on OpenShift.
 
@@ -145,7 +149,7 @@ Follow these steps to see how high availability works with SQL Server on OpenShi
 
     The output of this command should have a new pod name but start with the name **mssql-deployment**. The IP address should also be different and depending on your OpenShift cluster configuration the pod could be scheduled on a new node. When the pod status is Running, you should be able to access SQL Server
 
-6. If you have completed the steps in Module 02, then you restored the database WideWorldImporters to the container. And since the container uses a PersistentVolumeClaim, the WideWorldImporters should have the same data. Execute the following commands or the script **step4_find_people.sh** to query the database:
+7. If you have completed the steps in Module 02, then you restored the database WideWorldImporters to the container. And since the container uses a PersistentVolumeClaim, the WideWorldImporters should have the same data. Execute the following commands or the script **step4_find_people.sh** to query the database:
 
     `SERVERIP=$(oc get service | grep mssql-service | awk {'print $4'})`<br>
     `PORT=31433`<br>
