Format changes to readme files
These are tweaks and a few corrections to formatting changes from Buck

--- a/SQLonOpenShift/sqlonopenshift/04_HA.md
+++ b/SQLonOpenShift/sqlonopenshift/04_HA.md
@@ -71,11 +71,11 @@ Proceed to the Activity to see examples of how OpenShift provides high availabil
 
 Follow these steps to see how high availability works with SQL Server on OpenShift using replicas, PersistentVolumeClaims, and Load Balancers.
 
-<p><img style="float: left; margin: 0px 15px 15px 0px;" src="../graphics/checkbox.png">Open a shell prompt and change to the **sqlworkshops/SQLonOpenShift/sqlonopenshift/04_ha** directory.</p>
+<p><img style="float: left; margin: 0px 15px 15px 0px;" src="../graphics/checkbox.png">Open a shell prompt and change to the <b>sqlworkshops/SQLonOpenShift/sqlonopenshift/04_ha</b> directory.</p>
 
 <p><img style="float: left; margin: 0px 15px 15px 0px;" src="../graphics/checkbox.png">Ensure your scripts are executable</p>
 
-Run the following command (depending on your Linux shell and client you may need to preface this with sudo)
+Run the following command (depending on your Linux shell and client you may need to preface this with `sudo`):
 
 `chmod u+x *.sh`
 
@@ -85,7 +85,7 @@ One of the simple methods for High Availability for OpenShift is at the containe
 
 `oc get pods -o wide`
 
-The output of this command should look something like the following. Take note of the xxxxxx
+The output of this command should look something like the following:
 
 <pre>
 NAME                                READY     STATUS    RESTARTS   AGE       IP            NODE       NOMINATED NODE
@@ -98,11 +98,9 @@ Take note of the pod name (under the **NAME** column), the **IP address**, and t
 
 Run these commands to stop SQL Server. You can also use the script **step1_stop_container.sh**:
 
-`SERVERIP=$(kubectl get service | grep mssql-service | awk {'print $4'})`
-
-`PORT=31433`
-
-`sqlcmd -Usa -PSql2019isfast -S$SERVERIP,$PORT -Q"SHUTDOWN WITH NOWAIT"`
+`SERVERIP=$(kubectl get service | grep mssql-service | awk {'print $4'})`<br>
+`PORT=31433`<br>
+`sqlcmd -Usa -PSql2019isfast -S$SERVERIP,$PORT -Q"SHUTDOWN WITH NOWAIT"`<br>
 
 You should see the following output from the shell:
 
@@ -110,7 +108,7 @@ You should see the following output from the shell:
 Server shut down by NOWAIT request from login sa
 </pre>
 
-Now run the command again to see the pod status
+Now run the command again to see the pod status:
 
 `oc get pods -o wide`
 
@@ -120,19 +118,19 @@ Note the pod name, IP address, and node have not changed. The **STATUS** should 
 
 Execute the following commands to test SQL Server is running. You can also use the script **step2_test_sql.sh**
 
-`SERVERIP=$(oc get service | grep mssql-service | awk {'print $4'})`
-`PORT=31433`
-`sqlcmd -Usa -PSql2019isfast -S$SERVERIP,$PORT -Q"SELECT @@version"`
+`SERVERIP=$(oc get service | grep mssql-service | awk {'print $4'})`<br>
+`PORT=31433`<br>
+`sqlcmd -Usa -PSql2019isfast -S$SERVERIP,$PORT -Q"SELECT @@version"`<br>
 
 Your output should look similar to the following:
 
 <pre>
-       Microsoft SQL Server 2019 (CTP2.2) - 15.0.1200.24 (X64)
-        Dec  5 2018 16:51:26
-        Copyright (C) 2018 Microsoft Corporation
-        Developer Edition (64-bit) on Linux (Red Hat Enterprise Linux Server 7.6 (Maipo)) X64                          
+Microsoft SQL Server 2019 (CTP2.2) - 15.0.1200.24 (X64)
+Dec  5 2018 16:51:26
+Copyright (C) 2018 Microsoft Corporation
+Developer Edition (64-bit) on Linux (Red Hat Enterprise Linux Server 7.6 (Maipo)) X64                          
 
-   (1 rows affected)
+(1 rows affected)
 </pre>
 
 Depending on how long it takes OpenShift to restart the container, your re-connection make take longer than a few seconds.
@@ -143,17 +141,17 @@ Since you deployed the SQL Server container in a pod using 1 replica, if there i
 
 **NOTE**: *Ths is **not** the same as a SQL Server Availability Group which will be discussed in Module 05, Using an Operator with SQL Server on OpenShift.*
 
-Run the following commands to take note again of the pod details including name, status, IP, and node
+Run the following commands to take note again of the pod details including name, status, IP, and node:
 
 `oc get pods -o wide`
 
 Run the following commands to delete the node for the pod for SQL Server container. You can also use the script **step3_pod_failure.sh**. In this example, you can take advantage of the label used to create the SQL Server pod. This was defined in the following yaml fragment from Module 01:
 
 <pre>
-        template:
-        metadata:
-          labels:
-            app: mssql
+    template:
+      metadata:
+        labels:
+          app: mssql
 </pre>
 
 `oc delete pod -l app=mssql`
@@ -164,23 +162,23 @@ The output of this command should look like the following:
 pod "mssql-deployment-6d8844988b-j9r84" deleted
 </pre>
 
-and then you are returned to the command prompt
+and then you are returned to the command prompt.
 
-Now run the command again to see the pod status
+Now run the command again to see the pod status:
 
 `oc get pods -o wide`
 
 Starting a new pod on the same node should take a matter of seconds but if OpenShift has to start a new pod on a different node, it could take several minutes especially if the SQL Server container image does not exist on that new node.
 
-The output of this command should have a new pod name but start with the name **mssql-deployment**. The IP address should also be different and depending on your OpenShift cluster configuration the pod could be scheduled on a new node. When the pod status is Running, you should be able to access SQL Server
+The output of this command should have a new pod name but start with the name **mssql-deployment**. The IP address should also be different and depending on your OpenShift cluster configuration the pod could be scheduled on a new node. When the pod status is Running, you should be able to access SQL Server.
 
 <p><img style="float: left; margin: 0px 15px 15px 0px;" src="../graphics/checkbox.png">Test Recovery</p>
 
 If you have completed the steps in Module 02, then you restored the database **WideWorldImporters** to the container. And since the container uses a PersistentVolumeClaim, the WideWorldImporters should have the same data. Execute the following commands or the script **step4_find_people.sh** to query the database:
 
-`SERVERIP=$(oc get service | grep mssql-service | awk {'print $4'})`
-`PORT=31433`
-`sqlcmd -Usa -PSql2019isfast -S$SERVERIP,$PORT -Q"USE WideWorldImporters;SELECT TOP 10 FullName, PhoneNumber, EmailAddress FROM [Application].[People] ORDER BY FullName;" -Y30`
+`SERVERIP=$(oc get service | grep mssql-service | awk {'print $4'})`<br>
+`PORT=31433`<br>
+`sqlcmd -Usa -PSql2019isfast -S$SERVERIP,$PORT -Q"USE WideWorldImporters;SELECT TOP 10 FullName, PhoneNumber, EmailAddress FROM [Application].[People] ORDER BY FullName;" -Y30`<br>
 
 You should get the same results of data as you did in Module 02. Notice in this example, you connect to SQL Server with the **LoadBalancer** service IP address and port since you cannot determine what the IP address will be of the SQL Server container as it gets recreated on the same or other nodes.
 
@@ -232,20 +230,20 @@ In this activity, you will use OpenShift commands to deploy an update to the rel
 
 Execute the following commands to take note of the version of SQL Server. You can also execute the script **step2_test_sql.sh**:
 
-`SERVERIP=$(oc get service | grep mssql-service | awk {'print $4'})`
-`PORT=31433`
-`sqlcmd -Usa -PSql2019isfast -S$SERVERIP,$PORT -Q"SELECT @@version"`
+`SERVERIP=$(oc get service | grep mssql-service | awk {'print $4'})`<br>
+`PORT=31433`<br>
+`sqlcmd -Usa -PSql2019isfast -S$SERVERIP,$PORT -Q"SELECT @@version"`<br>
 
  Depending on what image was used for your workshop, the output should be reflective of the version of SQL Server deployed. In this example, the image used was for SQL Server 2019 CTP 2.2 for Red Hat Enterprise Linux.
 
 <pre>
-   Microsoft SQL Server 2019 (CTP2.2) - 15.0.1200.24 (X64)
-        Dec  5 2018 16:51:26
-        Copyright (C) 2018 Microsoft Corporation
-        Developer Edition (64-bit) on Linux (Red Hat Enterprise Linux Server 7.6 (Maipo)) X64
+Microsoft SQL Server 2019 (CTP2.2) - 15.0.1200.24 (X64)
+Dec  5 2018 16:51:26
+Copyright (C) 2018 Microsoft Corporation
+Developer Edition (64-bit) on Linux (Red Hat Enterprise Linux Server 7.6 (Maipo)) X64
 </pre>
 
-Execute the following commands to update the image of the SQL Server deployment from Module 01 to SQL Server 2019 CTP 2.3. You can also use the script **step5_update_sql.sh**
+Execute the following commands to update the image of the SQL Server deployment from Module 01 to SQL Server 2019 CTP 2.3. You can also use the script **step5_update_sql.sh**:
 
 `oc --record deployment set image mssql-deployment mssql=mcr.microsoft.com/mssql/rhel/server:2019-CTP2.3`
 
@@ -255,7 +253,7 @@ The output of this command should look similar to this:
 deployment.extensions/mssql-deployment image updated
 </pre>
 
-Execute the commands to see the status of the image update to the deployment
+Execute the commands to see the status of the image update to the deployment:
 
 `oc get all`
 
@@ -280,9 +278,9 @@ The time it takes to run the new pod and container could be several minutes as t
 
 Run the following commands to see the SQL Server version updates. You can also use the script **step2_test_sql.sh**:
 
-`SERVERIP=$(oc get service | grep mssql-service | awk {'print $4'})`
-`PORT=31433`
-`sqlcmd -Usa -PSql2019isfast -S$SERVERIP,$PORT -Q"SELECT @@version"`
+`SERVERIP=$(oc get service | grep mssql-service | awk {'print $4'})`<br>
+`PORT=31433`<br>
+`sqlcmd -Usa -PSql2019isfast -S$SERVERIP,$PORT -Q"SELECT @@version"`<br>
 
 The SQL Server container will move to a state of running, but internally the SQL Server engine must update the metadata for system and user databases. This process should only take a few minutes, but any attempt to connect to SQL Server before this completes can result in the following error:
 
@@ -293,15 +291,15 @@ Sqlcmd: Error: Microsoft ODBC Driver 17 for SQL Server : Login failed for user '
 Within a few minutes, the above command or script if run again should product results like the following:
 
 <pre>
-   Microsoft SQL Server 2019 (CTP2.3) - 15.0.1300.359 (X64)
-        Feb 15 2019 23:50:43
-        Copyright (C) 2019 Microsoft Corporation
-        Developer Edition (64-bit) on Linux (Red Hat Enterprise Linux Server 7.6 (Maipo)) X64                          
+Microsoft SQL Server 2019 (CTP2.3) - 15.0.1300.359 (X64)
+Feb 15 2019 23:50:43
+Copyright (C) 2019 Microsoft Corporation
+Developer Edition (64-bit) on Linux (Red Hat Enterprise Linux Server 7.6 (Maipo)) X64           
 
-   (1 rows affected)
+(1 rows affected)
 </pre>
 
-If you are going to proceed and complete Module 05, you need to cleanup resources. This can be done by running the following commands. You can also execute the script **step6_cleanup.sh**:
+If you are going to proceed and complete Module 05,you need to cleanup resources. This can be done by running the following commands. You can also execute the script **step6_cleanup.sh**:
 
 `oc delete project mssql`
 `oc project default`
